# CountOnMe

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  hodnoceni.txt  installer  preinst  skutecnost.txt
installer/: CountOnMe_1.0_all.deb  stddev_1.0_all.deb  test.txt
installer/CountOnMe_1.0_all/DEBIAN/: control  copyright
installer/CountOnMe_1.0_all/usr/share/applications/: CountOnMe.desktop
installer/stddev_1.0_all/DEBIAN/: control
installer/stddev_1.0_all/usr/share/applications/: stddev.desktop
mockup/: mockup.py
profiling/: vystup.txt
src/: CountOnMeGUI.py  Doxyfile  Lib_tests.py  Makefile  Standart_deviation.py  core.py  mathlib.py  test.txt
